--- a/Samples/Moves/MoveManager.Business/MoveManager.Business.csproj
+++ b/Samples/Moves/MoveManager.Business/MoveManager.Business.csproj
@@ -47,10 +47,6 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Cqrs.Helpers\Cqrs.Helpers.csproj">
-      <Project>{7c9c6fe2-189b-4783-9967-bd2e1cbae40e}</Project>
-      <Name>Cqrs.Helpers</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\SimpleCqrs.Implementation\SimpleCqrs.Implementation.csproj">
       <Project>{adf8bb5b-2175-41cf-9903-c19a7ae71490}</Project>
       <Name>SimpleCqrs.Implementation</Name>
@@ -58,6 +54,10 @@
     <ProjectReference Include="..\..\..\SimpleCqrs.Interface\SimpleCqrs.Interface.csproj">
       <Project>{b47f9996-0bd0-49b4-8b49-9b9530353baa}</Project>
       <Name>SimpleCqrs.Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Cqrs.Helpers\Cqrs.Helpers.csproj">
+      <Project>{7c9c6fe2-189b-4783-9967-bd2e1cbae40e}</Project>
+      <Name>Cqrs.Helpers</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
